# renegade-engine

./: CMakeLists.txt  config.hpp  main.cpp
assets/maps/dungeon/: dungeon-1.json  fantasy-dungeon.json  forest-1.json
assets/maps/testmap/: testmap-1.json  testmap-1_ceiling.csv  testmap-1_floor.csv  testmap-1_walls.csv
lib/: Csv.h  Tileson.h
mapeditor/: dungeon-1.tmx  dungeon.tsx  fantasy-dungeon.tmx  forest-1.tmx  testmap-1.tmx  testmap-1_floor.csv  testmap-1_walls.csv  textures.tsx
src/: Entities.h  Level.h  Map.h  Mask.h  Math.h  Messaging.hpp  Player.h  Process.h  Raycaster.h  TestMap.h  Textures.h
